@@ -177,7 +177,7 @@ public class HomeController implements Initializable {
     public void filterByRatingFrom(int value) {
         ratingLabel.setText(String.valueOf(value / 10.));
         String keyWord;
-        if (value / 10. >= 10) {
+        if (value / 10. <= 0) {
             keyWord = "RESET";
         } else {
             keyWord = String.valueOf(value / 10.);
@@ -312,7 +312,7 @@ public class HomeController implements Initializable {
      public List<Movie> getMoviesBetweenYears(List<Movie> movies, int startYear, int endYear) {
          return movies.stream()
                  .filter(movie -> movie.releaseYear >= startYear && movie.releaseYear <= endYear)
-                 .collect(Collectors.toList());
+                 .toList();
      }
 
      public static void main(String[] args) {
